--- a/src/Interaces/JFrameInfo.form
+++ b/src/Interaces/JFrameInfo.form
@@ -35,7 +35,7 @@
                   </Group>
               </Group>
               <EmptySpace pref="30" max="32767" attributes="0"/>
-              <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+              <Component id="jButtonClubes" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
@@ -54,7 +54,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonJugador" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonTorneos" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonClubes" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="36" max="32767" attributes="0"/>
               <Component id="jButtonAtras" min="-2" max="-2" attributes="0"/>
@@ -78,16 +78,25 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Torneos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTorneosActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="jButtonClubes">
       <Properties>
         <Property name="text" type="java.lang.String" value="Clubes"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonClubesActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonAtras">
       <Properties>
         <Property name="text" type="java.lang.String" value="Atr&#xe1;s"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAtrasActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
